--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@coreui/coreui": "^5.0.2",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.2.1",
-    "@coreui/react": "^5.3.0",
+    "@coreui/react": "^5.4.0",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@emotion/react": "^11.13.3",
@@ -48,6 +48,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-signature-canvas": "^1.0.6",
     "react-toastify": "^10.0.5",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.5"
