--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "core-js": "^3.37.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.0",
+    "firebase": "^10.14.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
