--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/material": "^6.1.2",
     "@mui/x-date-pickers": "^7.18.0",
     "@popperjs/core": "^2.11.8",
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
@@ -52,6 +53,7 @@
     "react-router-dom": "^6.23.1",
     "react-signature-canvas": "^1.0.6",
     "react-toastify": "^10.0.5",
+    "reactstrap": "^9.2.3",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.5"
   },
