--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/material": "^6.1.2",
     "@mui/x-date-pickers": "^7.18.0",
     "@popperjs/core": "^2.11.8",
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
