--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mui/x-date-pickers": "^7.18.0",
     "@popperjs/core": "^2.11.8",
     "@react-google-maps/api": "^2.20.3",
+    "@react-pdf/renderer": "^4.1.5",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
